[gd_scene load_steps=4 format=2]

[ext_resource path="res://props/powerMeter/powerMeterBackground.png" type="Texture" id=1]
[ext_resource path="res://props/powerMeter/PowerMeter.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.241071, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.25, 0 ), 0.0, 0.0, 0, 0 ]

[node name="PowerMeter" type="Node2D" groups=[
"damagable",
]]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.176027, 0.138728 )
texture = ExtResource( 1 )

[node name="PowerLine" type="Line2D" parent="."]
position = Vector2( 0, 13.611 )
points = PoolVector2Array( 0, 0, -23.296, 0 )
width = 3.0
width_curve = SubResource( 1 )
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="AcceptableLine" type="Line2D" parent="."]
position = Vector2( 0, 13.611 )
rotation = 3.14159
points = PoolVector2Array( -20, 0, -24, 0 )
width = 1.0
default_color = Color( 1, 0.976471, 0.4, 1 )

[node name="CheckPowerLevelTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="CheckPowerLevelTimer" to="." method="calculatePowerLevel"]
